[build-system]
# Specifies the build system to use. 
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
# Basic information about your project.
name = "gecko" 
version = "0.1.0" 
description = "Information gathering tool for a saving state of a machine after a crash for later diagnosis"
readme = "README.md" 
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  {name = "Elijah Anakalea-Buckley", email = "elijahab@caltech.edu"}
]
dependencies = [
    "pillow",
    "vncdotool",
    "smtplib",
    "pyscrenshot",
    "psutil"
    ]

classifiers = [
  "Programming Language :: Python"
]

[project.urls]
# Various URLs related to your project. These links are displayed on PyPI.
Repository = "https://github.com/CaltechOpticalObservatories/gecko.git"

[project.scripts]
# Defines command-line scripts for your package. Replace with your script and function.
your-command = "your_module:your_function"

[project.optional-dependencies]
# Optional dependencies that can be installed with extra tags, like "dev".
dev = [
  "pytest", 
  "black",
  "flake8"
]
